# exoscale-mcp-advisor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  live-smoke.yml  release.yml
docs/: mcp-advisor-design.md
src/exoscale_mcp_advisor/: __init__.py  __main__.py  catalogue.py  docs.py  server.py
tests/integration/: conftest.py  test_live_smoke.py
tests/unit/: test_catalogue.py  test_docs.py  test_no_mutation.py  test_package.py  test_protocol.py
