[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exoscale-mcp-advisor"
version = "0.0.0"
description = "Read-only Exoscale advisor MCP server — docs search plus list-only live catalogue queries, structurally incapable of mutation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Raphael Lang" }]
keywords = ["exoscale", "mcp", "advisor", "cloud", "ai", "read-only"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
# Runtime dependencies — see docs/mcp-advisor-design.md §8.
# - `mcp`: the official Model Context Protocol Python SDK (stdio server, FastMCP).
# - `exoscale-connector>=0.3.0`: first release shipping the packaged
#   `_skill/reference.md` knowledge bundle this server reads (design §4) and the
#   read-only `list` catalogue clients it wraps (design §3).
dependencies = [
    "mcp>=1.2",
    "exoscale-connector>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
# `uvx exoscale-mcp-advisor` (or a plain console invocation) starts the stdio
# server — design §8. No clone/install step for consumers.
exoscale-mcp-advisor = "exoscale_mcp_advisor.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/exoscale_mcp_advisor"]
